# Marching-Cubes

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
Code/Marching Cubes/: Marching Cubes.cbp  Marching Cubes.depend  Marching Cubes.layout  main.cpp
Code/Marching Cubes/Shaders/: frag.txt  vert.txt
Code/Marching Cubes/Shaders/Compute/: common.txt  countpolygons.txt  march1.txt  march3.txt
Code/Marching Cubes/src/: GL_headers.h
Code/Marching Cubes/src/Engine/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Window.cpp  Window.h
Code/Marching Cubes/src/Geometry/: CPUMarchingCubesGenerator.cpp  CPUMarchingCubesGenerator.h  CubeGeometryGenerator.cpp  CubeGeometryGenerator.h  GPUMarchingCubesGenerator.cpp  GPUMarchingCubesGenerator.h  Geometry.h  GeometryGenerator.cpp  GeometryGenerator.h  MarchingChunk.cpp  MarchingChunk.h
Code/Marching Cubes/src/SDF/: SDF.h  SinTerrain.cpp  Sphere.cpp
Code/Marching_Cubes/: CMakeLists.txt  Marching Cubes.cbp  config.json  main.cpp
Code/Marching_Cubes/.metals/: metals.h2.db
Code/Marching_Cubes/Shaders/: box_frag.glsl  box_vert.glsl  frag.glsl  frag.txt  line_frag.glsl  line_vert.glsl  screen_vert.glsl  sphere_preview_frag.glsl  sphere_preview_vert.glsl  text_frag.glsl
Code/Marching_Cubes/Shaders/Compute/: brush_functions.glsl  common.txt  countpolygons.glsl  generatedensity.glsl  generatedistance.glsl  polygonize.glsl  polygonize.txt  shadertop.glsl  terrain_common.glsl  terrain_modification.glsl  transvoxel_common.glsl  transvoxel_common.txt  transvoxel_count.glsl  transvoxel_count.txt  transvoxel_generate.glsl  transvoxel_polygonize.glsl  transvoxel_polygonize.txt
Code/Marching_Cubes/Textures/: crosshair.dds  grass.dds  rock.dds
Code/Marching_Cubes/freetype/lib/cmake/freetype/: freetype-config-release.cmake  freetype-config-version.cmake
Code/Marching_Cubes/freetype/lib/pkgconfig/: freetype2.pc
Code/Marching_Cubes/lib/glm/doc/: glm.docx
Code/Marching_Cubes/src/: BulletTest.h  Config.cpp  Config.h  GL_headers.h  Octree.cpp  Octree.h
Code/Marching_Cubes/src/Editing/: BezierBrush.h  Brush.h  BrushBoundingBox.cpp  BrushBoundingBox.h  CylinderBrush.cpp  CylinderBrush.h  Editing.cpp  Editing.h  EditingHeaders.h  EllipsoidBrush.cpp  EllipsoidBrush.h  TestBrushes.cpp  TestBrushes.h
Code/Marching_Cubes/src/Editing/Actions/: BezierAction.cpp  BezierAction.h  BezierHelperFunctions.cpp  BezierHelperFunctions.h  CubicBezierAction.cpp  CubicBezierAction.h  CylinderAction.cpp  CylinderAction.h  DigCylinderAction.cpp  DigCylinderAction.h  DigSingleSphereAction.cpp  DigSingleSphereAction.h  DigSphereAction.cpp  DigSphereAction.h  EllipsoidAction.cpp  EllipsoidAction.h  InterpolationSplineAction.cpp  InterpolationSplineAction.h  RoadAction.cpp  RoadAction.h  SingleSphereAction.cpp  SingleSphereAction.h  SphereAction.cpp  SphereAction.h
Code/Marching_Cubes/src/Editing/Brushes/: BezierBrush.cpp  Brush.cpp  Brush.h  BrushBoundingBox.cpp  BrushBoundingBox.h  CubicBezierBrush.cpp  CubicBezierBrush.h  CylinderBrush.cpp  CylinderBrush.h  EllipsoidBrush.h  RoadBrush.cpp  RoadBrush.h
Code/Marching_Cubes/src/Engine/: Action.cpp  Action.h  Camera.cpp  Camera.h  Controller.cpp  Controller.h  Drawing.cpp  Drawing.h  Shader.cpp  Shader.h  Text.cpp  Text.h  Timing.cpp  Timing.h  Window.cpp  Window.h
Code/Marching_Cubes/src/Engine/Drawing/: Drawing.cpp  Drawing.h  Preview.cpp  Preview.h  Text.cpp  Text.h
Code/Marching_Cubes/src/Geometry/: CPUMarchingCubesGenerator.cpp  CPUMarchingCubesGenerator.h  CubeGeometryGenerator.cpp  CubeGeometryGenerator.h  GPUMarchingCubesGenerator.cpp  GPUMarchingCubesGenerator.h  Geometry.h  GeometryGenerator.h  MarchingChunk.cpp  MarchingChunk.h  TransvoxelGenerator.cpp  TransvoxelGenerator.h  TransvoxelTables.cpp  TransvoxelTables.h
Code/Marching_Cubes/src/Physics/: BulletTest.h  ChunkMesh.cpp  ChunkMesh.h  DebugDraw.cpp  DebugDraw.h  LockQueue.cpp  LockQueue.h  MeshManager.cpp  MeshManager.h  PhysicsWorld.cpp  PhysicsWorld.h  PlayerController.cpp  PlayerController.h  TestShape.cpp  TestShape.h
Code/Marching_Cubes/src/SDF/: NoiseTerrain.cpp  NoiseTerrain.h  SDF.cpp  SDF.h  ScaledTerrain.cpp  ScaledTerrain.h  SinTerrain.cpp  SinTerrain.h  Sphere.cpp  Sphere.h  TestSDF.cpp  TestSDF.h  planesdf.cpp  planesdf.h
Tools/: transform_tables.py
Writeup/: document.tex  document_max_size.tex  mc.bib  writeup_words.txt
